hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_sort.inp
ag sort
ag sort "a" 
ag sort "a" "b"

quit
